Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body {
 @media (min-width: 800px) {
     .form.column {
         /* width: 100%; */
-        font-size: 1.1em;
+        font-size: 1.2em;
     }
 }
 
